--- a/app/templates/pages/index.hbs
+++ b/app/templates/pages/index.hbs
@@ -83,20 +83,18 @@ title: The Wedding
 
 <footer class="footer content-section">
     <div class="content-constrain">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla, tempore, quis, voluptas vel cupiditate excepturi rerum unde reiciendis repellendus molestias sapiente voluptates deserunt! Praesentium adipisci aut reprehenderit consequatur doloribus modi.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem, voluptatum quasi nam perspiciatis sed pariatur aliquam ipsum numquam aut maxime dolorum odio delectus laudantium ea nobis iste rerum. Deserunt, magnam.</p>
         <div class="countdown-clock">
             <h2>Let the countdown begin!</h2>
             <div id="countdown" class="countdown"></div>
         </div>
     </div>
     <hr />
-    <ul class="list-inline list-profiles">
-        <li>
-            <img src="img/liam.jpg" alt="Liam Walsh">
+    <ul class="list-profiles">
+        <li class="profile-item">
+            <img class="profile-image" src="img/liam.jpg" alt="Liam Walsh">
         </li>
-        <li>
-            <img src="img/gemma.jpg" alt="Gemma Lamb">
+        <li class="profile-item">
+            <img class="profile-image" src="img/gemma.jpg" alt="Gemma Lamb">
         </li>
     </ul>
 </footer>
