Updating, changing to new better idea :D

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -20,29 +20,31 @@ $cream: #FCF5EB;
 	box-sizing: border-box;
 }
 
-html, body {
-	background-attachment: local;
-	background-color: $cream;
-	background-image: url("../img/background.png");
-	background-repeat: repeat;
-	color: lighten(black, 10%);
-	height: 100%;
-	font-family: 'Rosario', sans-serif;
-	line-height: 1.45em;
+html,
+body {
 	overflow-x: hidden;
-	padding: 0;
-	margin: 0;
-	text-align: center;
 }
 
 html {
+	background-color: $cream;
+	// background-image: url("../img/background.png");
+	background-repeat: repeat;
+
+	color: lighten(black, 10%);
+	font-family: 'Rosario', sans-serif;
 	font-size: 80%;
 	@include bp("smallest") {
 		font-size: 100%;
 	}
 	@include bp("medium") {
-		font-size: 150%;
+		font-size: 120%;
 	}
+	min-height: 100%;
+	line-height: 1.45em;
+	overflow-y: scroll;
+	padding: 0;
+	margin: 0;
+	text-align: center;
 }
 
 h1, h2, h3, h4, h5, h6, p, time {
@@ -109,31 +111,6 @@ hr {
 	display: block;
 	li {
 		display: inline;
-	}
-}
-
-.list-navigation {
-	@extend %clearfix;
-	@extend %list-plain;
-	background-color: $purple;
-	color: $cream;
-	li, a {
-		display: block;
-	}
-	li {
-		float: left;
-		width: 25%;
-	}
-	a {
-		background-color: $purple;
-		color: $cream;
-		padding: 2em;
-		text-decoration: none;
-		transition: all 0.1s ease-in;
-		&:hover, &:focus {
-			background-color: lighten($purple, 10%);
-			transform: scale(1.1);
-		}
 	}
 }
 
@@ -213,20 +190,16 @@ hr {
 }
 
 .hero-full {
+	background-attachment: fixed;
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
-	display: flex;
-		justify-content: center;
-		flex-direction: column;
-	flex: 1;
-	min-height: 100%;
 }
 
 .hero-title {
 	background-image: url("../img/park-photo.jpg");
 	color: $cream;
-	padding: 2em 0;
+	padding: 5em 0;
 	position: relative;
 	@include bp("smallest") {
 		background-image: url("../img/zoo-photo.jpg");
@@ -243,11 +216,15 @@ hr {
 		width: 100%;
 		z-index: 0;
 	}
-	* {
+	.hero-center {
 		color: $cream;
 		margin-bottom: 0;
+		position: relative;
 		text-shadow: 0.05em 0.05em $purple;
 		z-index: 1;
+		* {
+			color: $cream;
+		}
 	}
 }
 
@@ -266,33 +243,14 @@ hr {
 	}
 }
 
-.responsive-map {
-	position: relative;
-	padding-bottom: 56.25%; /* 16:9 */
-	height: 0;
-	iframe {
-		border: none;
-		position: absolute;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 100%;
-	}
-}
-
-.map-constrain {
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-	max-width: 35em;
-	width: 100%;
-}
-
 .main-section {
 	background-image: url("../img/flourish-corner-top-left.svg"), url("../img/flourish-corner-top-right.svg"), url("../img/flourish-corner-bottom-left.svg"), url("../img/flourish-corner-bottom-right.svg");
 	background-position: top left, top right, bottom left, bottom right;
 	background-repeat: no-repeat;
-	background-size: 10em;
+	background-size: 7em;
+	@include bp("smallest") {
+		background-size: 10em;
+	}
 	h1, h2, h3, h4, h5, h6 {
 		background-size: 3em;
 		background-image: url("../img/flourish-center-bottom.svg");
