--- a/app/templates/pages/index.hbs
+++ b/app/templates/pages/index.hbs
@@ -2,30 +2,15 @@
 title: The Wedding
 ---
 <section id="home" class="hero-full hero-title">
-    <h1 class="badge">
-        <span class="badge-name">Liam</span> <span class="badge-verb">and</span> <span class="badge-name">Gemma's</span> <span class="badge-verb">Wedding</span>
-    </h1>
-    <div class="countdown-clock">
-        <time class="datetime" datetime="2015-04-07">4<sup>th</sup> July 2015</time>
+    <div class="hero-center">
+      <h1 class="badge">
+          <span class="badge-name">Liam</span> <span class="badge-verb">and</span> <span class="badge-name">Gemma's</span> <span class="badge-verb">Wedding</span>
+      </h1>
+      <div class="countdown-clock">
+          <time class="datetime" datetime="2015-04-07">4<sup>th</sup> July 2015</time>
+      </div>
     </div>
 </section>
-
-<nav class="navigation-site">
-    <ul class="list-navigation">
-        <li>
-            <a class="scroll-to" href="#home">Home</a>
-        </li>
-        <li>
-            <a class="scroll-to" href="#about">About Us</a>
-        </li>
-        <li>
-            <a class="scroll-to" href="#church">Church</a>
-        </li>
-        <li>
-            <a class="scroll-to" href="#reception">Reception</a>
-        </li>
-    </ul>
-</nav>
 
 <div class="main-section">
     <section id="about" class="content-section">
@@ -58,30 +43,14 @@ title: The Wedding
 
     <section id="church" class="hero-full content-section">
         <h2>Church</h2>
-        <div class="content-constrain">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia, eligendi?</p>
-        </div>
-        <div class="map-constrain">
-            <div class="responsive-map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2374.4144614907705!2d-2.3635330000000003!3d53.478924!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x569599fa4b74ec34!2sPatricroft+Methodist+Church!5e0!3m2!1sen!2suk!4v1404070491220" width="800" height="600" frameborder="0" style="border:0"></iframe>
-            </div>
-        </div>
     </section>
 
     <section id="reception" class="hero-full hero-reception content-section">
         <h2>Reception</h2>
-        <div class="content-constrain">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia, eligendi?</p>
-        </div>
-        <div class="map-constrain">
-            <div class="responsive-map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2374.8671120745553!2d-2.296037!3d53.470835!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xed3c94d61ec8b13f!2sThe+Lowry!5e0!3m2!1sen!2suk!4v1404071564400" width="800" height="600" frameborder="0" style="border:0"></iframe>
-            </div>
-        </div>
     </section>
 </div>
 
-<footer class="footer content-section">
+<footer id="the-countdown" class="footer content-section">
     <div class="content-constrain">
         <div class="countdown-clock">
             <h2>Let the countdown begin!</h2>
