Adding the story images

--- a/app/templates/pages/index.hbs
+++ b/app/templates/pages/index.hbs
@@ -13,8 +13,8 @@ title: The Wedding
 </section>
 
 <div class="main-section">
-    <section id="about" class="content-section">
-        <h2>About Us</h2>
+    <section id="the-story" class="content-section">
+        <h2>The Story</h2>
         <div class="content-constrain">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae, labore, eius aut eum quos veritatis esse accusantium porro odit libero unde voluptate. Odio, eos eum necessitatibus doloribus sed pariatur at.</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum, exercitationem, vel, aut, consectetur eum rem officiis architecto sapiente commodi quia asperiores est consequatur possimus doloremque iure nam officia? Fugiat, repudiandae.</p>
@@ -41,12 +41,12 @@ title: The Wedding
         </ul> -->
     </section>
 
-    <section id="church" class="hero-full content-section">
-        <h2>Church</h2>
+    <section id="the-ceremony" class="hero-full content-section">
+        <h2>The Ceremony</h2>
     </section>
 
     <section id="reception" class="hero-full hero-reception content-section">
-        <h2>Reception</h2>
+        <h2>The Reception</h2>
     </section>
 </div>
 
