Updating the design

--- a/app/templates/pages/index.hbs
+++ b/app/templates/pages/index.hbs
@@ -2,7 +2,7 @@
 title: The Wedding
 ---
 <section id="home" class="hero-full hero-title">
-    <div class="hero-center">
+    <div class="hero-center wow animate-slide-up" data-wow-delay="0.5s">
       <h1 class="badge">
           <span class="badge-name">Liam</span> <span class="badge-verb">and</span> <span class="badge-name">Gemma's</span> <span class="badge-verb">Wedding</span>
       </h1>
@@ -13,41 +13,43 @@ title: The Wedding
 </section>
 
 <div class="main-section">
-    <section id="the-story" class="content-section">
-        <h2>The Story</h2>
-        <div class="content-constrain">
+    <article id="the-story" class="content-section wow animate-fade-in" data-wow-delay="0.5s" data-wow-offset="300">
+        <header>
+          <h1 class="content-title">The Story</h1>
+        </header>
+        <section class="content-constrain">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae, labore, eius aut eum quos veritatis esse accusantium porro odit libero unde voluptate. Odio, eos eum necessitatibus doloribus sed pariatur at.</p>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum, exercitationem, vel, aut, consectetur eum rem officiis architecto sapiente commodi quia asperiores est consequatur possimus doloremque iure nam officia? Fugiat, repudiandae.</p>
-        </div>
-        <!-- <ul class="list-gallery">
-            <li>
-                <img src="//placehold.it/350x150" alt="Placeholder">
-            </li>
-            <li>
-                <img src="//placehold.it/350x150" alt="Placeholder">
-            </li>
-            <li>
-                <img src="//placehold.it/350x150" alt="Placeholder">
-            </li>
-            <li>
-                <img src="//placehold.it/350x150" alt="Placeholder">
-            </li>
-            <li>
-                <img src="//placehold.it/350x150" alt="Placeholder">
-            </li>
-            <li>
-                <img src="//placehold.it/350x150" alt="Placeholder">
-            </li>
-        </ul> -->
-    </section>
+        </section>
+    </article>
 
-    <section id="the-ceremony" class="hero-full content-section">
-        <h2>The Ceremony</h2>
-    </section>
+    <article id="the-ceremony" class="section-the-ceremony content-section">
+      <div class="content-constrain wow animate-fade-in" data-wow-delay="0.5s" data-wow-offset="100">
+        <header>
+          <h1 class="content-title">The Ceremony</h1>
+        </header>
+        <section class="align-left content-constrain-small">
+          <p>
+            The ceremony will take place at the Patricroft Methodist Church in Eccles. Times are to be confirmed at a later date.
+          </p>
+          <a href="https://www.google.co.uk/maps/place/Patricroft+Methodist+Church/@53.478924,-2.363533,15z/data=!4m2!3m1!1s0x0:0x569599fa4b74ec34">Click here for directions to the Church</a>
+        </section>
+      </div>
+    </article>
 
-    <section id="reception" class="hero-full hero-reception content-section">
-        <h2>The Reception</h2>
-    </section>
+    <article id="reception" class="section-the-reception content-section">
+      <div class="content-constrain wow animate-fade-in" data-wow-delay="0.5s" data-wow-offset="100">
+        <header>
+          <h1 class="content-title">The Reception</h1>
+        </header>
+        <section class="align-right content-constrain-small">
+          <p>
+            The ceremony will take place at the Patricroft Methodist Church in Eccles. Times are to be confirmed at a later date.
+          </p>
+          <a href="https://www.google.co.uk/maps/place/The+Lowry/@53.470835,-2.296037,15z/data=!4m2!3m1!1s0x0:0xed3c94d61ec8b13f">Click here for directions to The Lowry</a>
+        </section>
+      </div>
+    </article>
 </div>
 
 <footer id="the-countdown" class="footer content-section">
@@ -58,7 +60,7 @@ title: The Wedding
         </div>
     </div>
     <hr />
-    <ul class="list-profiles">
+    <ul class="list-profiles wow animate-slide-up" data-wow-delay="0.5s" data-wow-offset="100">
         <li class="profile-item">
             <img class="profile-image" src="img/liam.jpg" alt="Liam Walsh">
         </li>
