--- a/app/templates/partials/foot.hbs
+++ b/app/templates/partials/foot.hbs
@@ -1,4 +1,4 @@
-<!-- build:js(.) js/vendor.js -->
+<!-- build:js(.tmp) js/vendor.js -->
 <!-- bower:js -->
 <script src="../../bower_components/jquery/dist/jquery.js"></script>
 <script src="../../bower_components/modernizr/modernizr.js"></script>
@@ -6,7 +6,7 @@
 <!-- endbower -->
 <!-- endbuild -->
 
-<!-- build:js(.) js/main.js -->
+<!-- build:js(.tmp) js/main.js -->
 <script src="js/main.js"></script>
 <!-- endbuild -->
 
