Fixing JS build again

--- a/app/templates/partials/foot.hbs
+++ b/app/templates/partials/foot.hbs
@@ -1,4 +1,4 @@
-<!-- build:js(.tmp) js/vendor.js -->
+<!-- build:js(.) js/vendor.js -->
 <!-- bower:js -->
 <script src="../../bower_components/jquery/dist/jquery.js"></script>
 <script src="../../bower_components/modernizr/modernizr.js"></script>
