Making big changes, using photos from Zen

--- a/app/templates/pages/index.hbs
+++ b/app/templates/pages/index.hbs
@@ -1,71 +1,108 @@
 ---
 title: The Wedding
 ---
-<section id="home" class="hero-full hero-title">
-    <div class="hero-center wow animate-slide-up" data-wow-delay="0.5s">
-      <h1 class="badge">
-          <span class="badge-name">Liam</span> <span class="badge-verb">and</span> <span class="badge-name">Gemma's</span> <span class="badge-verb">Wedding</span>
-      </h1>
-      <div class="countdown-clock">
-          <time class="datetime" datetime="2015-04-07">4<sup>th</sup> July 2015</time>
-      </div>
+
+<header id="home" class="page-header" data-stellar-background-ratio="0.5">
+  <div class="header-content">
+    <h1 class="header-title">Liam and Gemma</h1>
+  </div>
+</header>
+
+<main class="page-main">
+  <article id="the-story" class="box">
+    <header>
+      <h1 class="box-title">We're getting married</h1>
+      <time class="box-caption datetime" datetime="2015-04-07">4<sup>th</sup> July 2015</time>
+    </header>
+    <section class="copy constrain-copy">
+      <p>
+        It was <time datetime="2013-17-11">17<sup>th</sup> November 2013</time> at our <a href="{{ links.victoria-park }}">favourite spot</a> that we decided to to spend the rest of our lives together.
+      </p>
+      <p>
+        After being engaged for more then a year and a half the big day <a href="#the-countdown">will soon be here</a>. We hope that this day will bring joy to all who bear witness as well as ourselves.
+      </p>
+    </section>
+  </article>
+
+  <figure class="divider-figure">
+    <!-- <img class="figure-image profile-image" src="img/liam.jpg" alt="Liam Walsh">
+    <img class="figure-image profile-image" src="img/gemma.jpg" alt="Gemma Lamb"> -->
+    <img class="figure-image" src="images/tip-toe-kiss.jpg" alt="Tip Toe Kiss" />
+  </figure>
+
+  <article id="the-ceremony" class="box box-ceremony">
+    <header>
+      <h1 class="box-title">The Ceremony</h1>
+    </header>
+    <section class="constrain-copy">
+      <p>
+        The wedding ceremony will take place at the Patricroft Methodist Church in Eccles.
+      </p>
+      <p>
+        Times are to be confirmed at a later date.
+      </p>
+      <a href="https://www.google.co.uk/maps/place/Patricroft+Methodist+Church/@53.478924,-2.363533,15z/data=!4m2!3m1!1s0x0:0x569599fa4b74ec34">Click here for directions to the Church</a>
+    </section>
+  </article>
+
+  <article id="reception" class="box box-reception">
+    <header>
+      <h1 class="box-title">The Reception</h1>
+    </header>
+    <section class="constrain-copy">
+      <p>
+        The wedding breakfast and evening party will take place in the lovely <a href="{{ links.compass-room }}">Compass Room</a> at The Lowry Theatre in Salford Quays.
+      </p>
+      <p>
+        Times are to be confirmed at a later date.
+      </p>
+      <a href="https://www.google.co.uk/maps/place/The+Lowry/@53.470835,-2.296037,15z/data=!4m2!3m1!1s0x0:0xed3c94d61ec8b13f">Click here for directions to The Lowry</a>
+    </section>
+  </article>
+
+  <article id="accomodation" class="box box-accomodation">
+    <header>
+      <h1 class="box-title">Accomodation</h1>
+    </header>
+    <section class="constrain-copy">
+      <p>
+        If you are travelling from afar, or simply want a place nearby to stay after the wedding, the <a href="{{ links.holiday-inn }}">Holiday Inn</a> at Media City are offerings our guests a discounted price for rooms. Please get in touch for further details.
+      </p>
+    </section>
+  </article>
+
+  <figure class="divider-figure">
+    <img class="figure-image" src="images/media-city.jpg" alt="Media City" />
+  </figure>
+
+  <article id="gifts" class="box">
+    <header>
+      <h1 class="box-title">Wedding Gifts</h1>
+    </header>
+    <section class="constrain-copy">
+      <p>
+        We haven't registered for gifts at stores or online retailers but if you would like to bring a gift of some kind there will be a place at the evening venue (a suitcase) for collecting cards.
+      </p>
+    </section>
+  </article>
+
+  <!-- <article id="gallery" class="box">
+    <header>
+      <h1 class="box-title"></h1>
+    </header>
+    <section class="constrain-copy">
+      <p>
+
+      </p>
+    </section>
+  </article> -->
+</main>
+
+<footer id="the-countdown" class="page-footer box">
+  <div class="footer-content constrain-copy">
+    <div class="countdown-clock">
+      <h2>We'll see you there!</h2>
+      <div id="countdown" class="countdown"></div>
     </div>
-</section>
-
-<div class="main-section">
-    <article id="the-story" class="content-section wow animate-fade-in" data-wow-delay="0.5s" data-wow-offset="300">
-        <header>
-          <h1 class="content-title">The Story</h1>
-        </header>
-        <section class="content-constrain">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae, labore, eius aut eum quos veritatis esse accusantium porro odit libero unde voluptate. Odio, eos eum necessitatibus doloribus sed pariatur at.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum, exercitationem, vel, aut, consectetur eum rem officiis architecto sapiente commodi quia asperiores est consequatur possimus doloremque iure nam officia? Fugiat, repudiandae.</p>
-        </section>
-    </article>
-
-    <article id="the-ceremony" class="section-the-ceremony content-section">
-      <div class="content-constrain wow animate-fade-in" data-wow-delay="0.5s" data-wow-offset="100">
-        <header>
-          <h1 class="content-title">The Ceremony</h1>
-        </header>
-        <section class="align-left content-constrain-small">
-          <p>
-            The ceremony will take place at the Patricroft Methodist Church in Eccles. Times are to be confirmed at a later date.
-          </p>
-          <a href="https://www.google.co.uk/maps/place/Patricroft+Methodist+Church/@53.478924,-2.363533,15z/data=!4m2!3m1!1s0x0:0x569599fa4b74ec34">Click here for directions to the Church</a>
-        </section>
-      </div>
-    </article>
-
-    <article id="reception" class="section-the-reception content-section">
-      <div class="content-constrain wow animate-fade-in" data-wow-delay="0.5s" data-wow-offset="100">
-        <header>
-          <h1 class="content-title">The Reception</h1>
-        </header>
-        <section class="align-right content-constrain-small">
-          <p>
-            The ceremony will take place at the Patricroft Methodist Church in Eccles. Times are to be confirmed at a later date.
-          </p>
-          <a href="https://www.google.co.uk/maps/place/The+Lowry/@53.470835,-2.296037,15z/data=!4m2!3m1!1s0x0:0xed3c94d61ec8b13f">Click here for directions to The Lowry</a>
-        </section>
-      </div>
-    </article>
-</div>
-
-<footer id="the-countdown" class="footer content-section">
-    <div class="content-constrain">
-        <div class="countdown-clock">
-            <h2>Let the countdown begin!</h2>
-            <div id="countdown" class="countdown"></div>
-        </div>
-    </div>
-    <hr />
-    <ul class="list-profiles wow animate-slide-up" data-wow-delay="0.5s" data-wow-offset="100">
-        <li class="profile-item">
-            <img class="profile-image" src="img/liam.jpg" alt="Liam Walsh">
-        </li>
-        <li class="profile-item">
-            <img class="profile-image" src="img/gemma.jpg" alt="Gemma Lamb">
-        </li>
-    </ul>
+  </div>
 </footer>
