--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,8 +1,33 @@
 // bower:scss
 // endbower
 
-$purple: #451E5D;
+
+/*------------------------------------*\
+  PDCTO
+\*------------------------------------*/
+
+/*------------------------------------*\
+  Variables
+\*------------------------------------*/
+
+$medium-orchid: #BA55D3;
+$violet: #EE82EE;
+$plum: #DDA0DD;
+$helio: #DF73FF;
+$mauve: #E99EFF;
+
 $cream: #FCF5EB;
+$misty-rose: #FFE4E1;
+$floral-white: #FFFAF0;
+$ivory: #FFFFF0;
+
+$primary: $cream;
+$secondary: $medium-orchid;
+$font: lighten(black, 20%);
+
+/*------------------------------------*\
+  Mixins and Placeholders
+\*------------------------------------*/
 
 @mixin bp($point) {
 	@if $point == smallest {
@@ -16,281 +41,15 @@ $cream: #FCF5EB;
 	}
 }
 
-*, *:before, *:after {
-	box-sizing: border-box;
-}
-
-html,
-body {
-	overflow-x: hidden;
-}
-
-html {
-	background-color: $cream;
-	background-repeat: repeat;
-
-	color: lighten(black, 10%);
-	font-family: 'Rosario', sans-serif;
-	font-size: 80%;
-	@include bp("smallest") {
-		font-size: 100%;
-	}
-	@include bp("medium") {
-		font-size: 120%;
-	}
-	min-height: 100%;
-	line-height: 1.45em;
-	overflow-y: scroll;
-	padding: 0;
-	margin: 0;
-	text-align: center;
-}
-
-h1, h2, h3, h4, h5, h6, p, time {
-	margin-top: 0;
-	margin-bottom: 1em;
-}
-
-h1, h2, h3, h4, h5, h6 {
-	color: $purple;
-}
-
-h1, h2, h3 {
-	font-family: 'Great Vibes', cursive;
-	line-height: 1.2em;
-}
-
-h1 {
-	font-size: 3.375em;
-	font-weight: 900;
-}
-
-h2 {
-	font-size: 2.25em;
-}
-
-h3 {
-	font-size: 1.5em;
-}
-
-img {
-	height: auto;
-	max-width: 100%;
-}
-
-a {
-	color: $purple;
-}
-
-hr {
-	background-size: contain;
-	background-image: url("../img/flourish-center-bottom-alt.svg");
-	background-position: center;
-	background-repeat: no-repeat;
-	border: none;
-	height: 1.5em;
-	margin: 2em auto;
-	padding: 0;
-}
-
 %clearfix:after {
   content: "";
   display: table;
   clear: both;
 }
 
-%list-plain {
-	list-style-type: none;
-	padding: 0;
-	margin: 0;
-}
-
-.list-inline {
-	@extend %list-plain;
-	display: block;
-	li {
-		display: inline;
-	}
-}
-
-.list-profiles {
-	@extend %clearfix;
-	@extend %list-plain;
-	.profile-item {
-		display: inline-block;
-		margin-right: 1em;
-		max-width: 40%;
-		&:last-child {
-			margin-right: 0;
-		}
-	}
-	.profile-image {
-		border: 0.2em solid $cream;
-		border-radius: 50%;
-	}
-}
-
-.content-section {
-	padding: 2em 1em;
-	@include bp("smallest") {
-		padding: 4em 2em;
-	}
-}
-
-%content-constrain-common {
-	margin-left: auto;
-	margin-right: auto;
-}
-
-.content-constrain {
-	@extend %content-constrain-common;
-	max-width: 45em;
-}
-
-.content-constrain-small {
-	max-width: 30em;
-}
-
-.badge {
-	background-image: url("../img/flourish-badge-top.svg"), url("../img/flourish-badge-bottom.svg");
-	background-position: top center, bottom center;
-	background-repeat: no-repeat;
-	background-size: 5em;
-	display: block;
-	line-height: 1em;
-	padding: 1em 0 1.25em;
-	text-align: center;
-	.badge-name, .badge-verb {
-		display: block;
-		line-height: 1em;
-	}
-	.badge-name {
-		font-family: 'Changa One', cursive;
-		text-transform: uppercase;
-	}
-	.badge-verb {
-		font-size: 50%;
-		line-height: 0.75em;
-		margin-top: 0.25em;
-	}
-}
-
-.hero-full {
-	background-attachment: fixed;
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: cover;
-}
-
-.hero-title {
-	background-image: url("../img/park-photo.jpg");
-	color: $cream;
-	padding: 5em 0;
-	position: relative;
-	@include bp("smallest") {
-		background-image: url("../img/zoo-photo.jpg");
-		font-size: 120%;
-	}
-	&:before {
-		background-color: rgba($purple, 0.5);
-		content: "";
-		display: block;
-		height: 100%;
-		left: 0;
-		position: absolute;
-		top: 0;
-		width: 100%;
-		z-index: 0;
-	}
-	.hero-center {
-		color: $cream;
-		margin-bottom: 0;
-		position: relative;
-		text-shadow: 0.05em 0.05em $purple;
-		z-index: 1;
-		* {
-			color: $cream;
-		}
-	}
-}
-
-.countdown-clock {
-	margin-top: 1.5em;
-	* {
-		margin-bottom: 0;
-	}
-	.datetime {
-		font-family: 'Great Vibes', cursive;
-		font-size: 2em;
-		line-height: 1em;
-	}
-	.countdown {
-		font-size: 1.5em;
-	}
-}
-
-.main-section {
-	background-image: url("../img/flourish-corner-top-left.svg"), url("../img/flourish-corner-top-right.svg"), url("../img/flourish-corner-bottom-left.svg"), url("../img/flourish-corner-bottom-right.svg");
-	background-position: top left, top right, bottom left, bottom right;
-	background-repeat: no-repeat;
-	background-size: 7em;
-	@include bp("smallest") {
-		background-size: 10em;
-	}
-}
-
-.content-section {
-	.content-title {
-		background-size: 3em;
-		background-image: url("../img/flourish-center-bottom.svg");
-		background-position: bottom center;
-		background-repeat: no-repeat;
-		padding-bottom: 0.75em;
-	}
-}
-
-.section-the-reception,
-.section-the-ceremony {
-	background-attachment: fixed;
-	background-size: cover;
-	background-position: center;
-	overflow: hidden;
-	text-shadow: 0.1em 0.1em $cream;
-	&:hover,
-	&:focus {
-
-	}
-}
-
-.section-the-reception {
-	background-image: url("../img/lowry.png");
-}
-
-.section-the-ceremony {
-	background-image: url("../img/church.png");
-}
-
-.align-left {
-	text-align: left;
-	margin-right: auto;
-}
-
-.align-right {
-	text-align: right;
-	margin-left: auto;
-}
-
-.footer {
-	background-color: $purple;
-	color: $cream;
-	* {
-		color: $cream;
-	}
-}
-
-/**
- * Animations
- **/
+/*------------------------------------*\
+  Animations
+\*------------------------------------*/
 
 .js {
   .wow {
@@ -321,5 +80,165 @@ hr {
 @keyframes fadeIn {
 	from {
 		opacity: 0;
+	}
+}
+
+/*------------------------------------*\
+  Code
+\*------------------------------------*/
+
+/**
+ * Base
+ **/
+
+*, *:before, *:after {
+	box-sizing: inherit;
+}
+
+html,
+body {
+	box-sizing: border-box;
+	overflow-x: hidden;
+}
+
+html {
+	background-color: $ivory;
+	color: $font;
+	font-family: 'Rosario', sans-serif;
+	font-size: 100%;
+	min-height: 100%;
+	line-height: 1.45;
+	overflow-y: scroll;
+	padding: 0;
+	margin: 0;
+	text-align: center;
+}
+
+h1, h2, h3, h4, p, time {
+	margin-top: 0;
+	margin-bottom: 1rem;
+}
+
+h1, h2, h3, h4 {
+  line-height: 1.2;
+}
+
+h1, h2, h3 {
+	font-family: 'Great Vibes', cursive;
+}
+
+h1 {
+  font-size: 2.441em;
+}
+
+h2 {
+	font-size: 1.953em;
+}
+
+h3 {
+	font-size: 1.563em;
+}
+
+h4 {
+	font-size: 1.25em;
+}
+
+p {
+
+}
+
+small {
+	font-size: 0.8em;
+}
+
+img {
+	height: auto;
+	max-width: 100%;
+}
+
+a {
+
+}
+
+/**
+ * Header
+ **/
+
+.page-header {
+	position: relative;
+
+	background-image: url(../images/band-stand-embrace.jpg);
+	background-position-x: center !important;
+	background-position-y: top;
+	background-size: cover;
+	height: 100vh;
+	.header-content {
+		position: absolute;
+		bottom: 2em;
+		left: 0;
+
+		display: block;
+		width: 100%;
+
+		color: $primary;
+
+		text-align: center;
+		text-shadow: 1px 1px 1px $font;
+	}
+	.header-title {
+		margin: 0;
+	}
+}
+
+.box {
+	padding: 2.5em 1.5em;
+	.box-title {
+		line-height: 1;
+	}
+	.box-caption {
+
+	}
+}
+
+.constrain-copy {
+
+}
+
+.copy {
+	> * {
+		margin-bottom: 0;
+	}
+}
+
+.divider-figure {
+	display: block;
+	margin: 0;
+	padding: 0;
+	width: 100%;
+	.figure-image {
+		display: block;
+		width: 100%;
+	}
+}
+
+.page-footer {
+	position: relative;
+
+	background-color: $misty-rose;
+	background-image: linear-gradient($misty-rose 50%, transparent 100%), url(../images/walking-away.jpg);
+	background-position-x: center !important;
+	background-position-y: bottom;
+	background-size: contain;
+	background-repeat: no-repeat;
+	padding-bottom: 10em;
+
+	color: $primary;
+
+	text-shadow: 1px 1px 1px $font;
+	.countdown-clock {
+
+	}
+	.countdown {
+		white-space: nowrap;
 	}
 }
