--- a/app/templates/partials/foot.hbs
+++ b/app/templates/partials/foot.hbs
@@ -3,6 +3,7 @@
 <script src="../../bower_components/jquery/dist/jquery.js"></script>
 <script src="../../bower_components/modernizr/modernizr.js"></script>
 <script src="../../bower_components/WOW/dist/wow.js"></script>
+<script src="../../bower_components/stellar.js/jquery.stellar.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 
