Changing image paths

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -167,7 +167,7 @@ a {
 .page-header {
 	position: relative;
 
-	background-image: url(../images/band-stand-embrace.jpg);
+	background-image: url(../img/band-stand-embrace.jpg);
 	background-position-x: center !important;
 	background-position-y: top;
 	background-size: cover;
@@ -225,7 +225,7 @@ a {
 	position: relative;
 
 	background-color: $misty-rose;
-	background-image: linear-gradient($misty-rose 50%, transparent 100%), url(../images/walking-away.jpg);
+	background-image: linear-gradient($misty-rose 50%, transparent 100%), url(../img/walking-away.jpg);
 	background-position-x: center !important;
 	background-position-y: bottom;
 	background-size: contain;
