--- a/app/templates/pages/index.hbs
+++ b/app/templates/pages/index.hbs
@@ -25,7 +25,7 @@ title: The Wedding
   </article>
 
   <figure class="divider-figure">
-    <img class="figure-image" src="images/tip-toe-kiss.jpg" alt="Tip Toe Kiss" />
+    <img class="figure-image" src="img/tip-toe-kiss.jpg" alt="Tip Toe Kiss" />
   </figure>
 
   <article id="the-ceremony" class="box box-ceremony">
@@ -70,7 +70,7 @@ title: The Wedding
   </article>
 
   <figure class="divider-figure">
-    <img class="figure-image" src="images/media-city.jpg" alt="Media City" />
+    <img class="figure-image" src="img/media-city.jpg" alt="Media City" />
   </figure>
 
   <article id="gifts" class="box">
