Updating a lot of imagery

--- a/app/templates/pages/index.hbs
+++ b/app/templates/pages/index.hbs
@@ -2,7 +2,7 @@
 title: The Wedding
 ---
 
-<header id="home" class="page-header" data-stellar-background-ratio="0.5">
+<header id="home" class="page-header">
   <div class="header-content">
     <h1 class="header-title">Liam and Gemma</h1>
   </div>
@@ -25,21 +25,21 @@ title: The Wedding
   </article>
 
   <figure class="divider-figure">
-    <img class="figure-image" src="img/tip-toe-kiss.jpg" alt="Tip Toe Kiss" />
+    <img class="figure-image image-align-bottom" src="img/tip-toe-kiss.jpg" alt="Tip Toe Kiss" />
   </figure>
 
   <article id="the-ceremony" class="box box-ceremony">
     <header>
       <h1 class="box-title">The Ceremony</h1>
     </header>
-    <section class="constrain-copy">
+    <section class="copy constrain-copy">
       <p>
         The wedding ceremony will take place at the Patricroft Methodist Church in Eccles.
       </p>
       <p>
         Times are to be confirmed at a later date.
       </p>
-      <a href="https://www.google.co.uk/maps/place/Patricroft+Methodist+Church/@53.478924,-2.363533,15z/data=!4m2!3m1!1s0x0:0x569599fa4b74ec34">Click here for directions to the Church</a>
+      <a class="btn-cta" href="https://www.google.co.uk/maps/place/Patricroft+Methodist+Church/@53.478924,-2.363533,15z/data=!4m2!3m1!1s0x0:0x569599fa4b74ec34">Directions to the Church</a>
     </section>
   </article>
 
@@ -47,14 +47,14 @@ title: The Wedding
     <header>
       <h1 class="box-title">The Reception</h1>
     </header>
-    <section class="constrain-copy">
+    <section class="copy constrain-copy">
       <p>
         The wedding breakfast and evening party will take place in the lovely <a href="{{ links.compass-room }}">Compass Room</a> at The Lowry Theatre in Salford Quays.
       </p>
       <p>
         Times are to be confirmed at a later date.
       </p>
-      <a href="https://www.google.co.uk/maps/place/The+Lowry/@53.470835,-2.296037,15z/data=!4m2!3m1!1s0x0:0xed3c94d61ec8b13f">Click here for directions to The Lowry</a>
+      <a class="btn-cta" href="https://www.google.co.uk/maps/place/The+Lowry/@53.470835,-2.296037,15z/data=!4m2!3m1!1s0x0:0xed3c94d61ec8b13f">Directions to The Lowry</a>
     </section>
   </article>
 
@@ -62,7 +62,7 @@ title: The Wedding
     <header>
       <h1 class="box-title">Accomodation</h1>
     </header>
-    <section class="constrain-copy">
+    <section class="copy constrain-copy">
       <p>
         If you are travelling from afar, or simply want a place nearby to stay after the wedding, the <a href="{{ links.holiday-inn }}">Holiday Inn</a> at Media City are offerings our guests a discounted price for rooms. Please get in touch for further details.
       </p>
@@ -70,14 +70,14 @@ title: The Wedding
   </article>
 
   <figure class="divider-figure">
-    <img class="figure-image" src="img/media-city.jpg" alt="Media City" />
+    <img class="figure-image image-align-top" src="img/media-city.jpg" alt="Media City" />
   </figure>
 
   <article id="gifts" class="box">
     <header>
       <h1 class="box-title">Wedding Gifts</h1>
     </header>
-    <section class="constrain-copy">
+    <section class="copy constrain-copy">
       <p>
         We haven't registered for gifts at stores or online retailers but if you would like to bring a gift of some kind there will be a place at the evening venue (a suitcase) for collecting cards.
       </p>
