--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -3,7 +3,8 @@
 
 
 /*------------------------------------*\
-  PDCTO
+  PDCTO - Positioning, Display & Box
+	Model, Color, Text, Other
 \*------------------------------------*/
 
 /*------------------------------------*\
@@ -21,8 +22,9 @@ $misty-rose: #FFE4E1;
 $floral-white: #FFFAF0;
 $ivory: #FFFFF0;
 
-$primary: $cream;
-$secondary: $medium-orchid;
+$primary: $ivory;
+$secondary: $misty-rose;
+$tertiary: $helio;
 $font: lighten(black, 20%);
 
 /*------------------------------------*\
@@ -30,13 +32,16 @@ $font: lighten(black, 20%);
 \*------------------------------------*/
 
 @mixin bp($point) {
-	@if $point == smallest {
+	@if $point == tiny {
+		@media (min-width: 30em) { @content; }
+	}
+	@else if $point == small {
 		@media (min-width: 37.5em) { @content; }
 	}
 	@else if $point == medium {
 		@media (min-width: 56.25em) { @content; }
 	}
-	@else if $point == biggest {
+	@else if $point == large {
 		@media (min-width: 75em)  { @content; }
 	}
 }
@@ -91,27 +96,35 @@ $font: lighten(black, 20%);
  * Base
  **/
 
-*, *:before, *:after {
+*, *::before, *::after {
 	box-sizing: inherit;
 }
 
 html,
 body {
 	box-sizing: border-box;
-	overflow-x: hidden;
+	height: 100%;
+	overflow: hidden;
 }
 
 html {
-	background-color: $ivory;
+	background-color: $primary;
 	color: $font;
 	font-family: 'Rosario', sans-serif;
 	font-size: 100%;
-	min-height: 100%;
 	line-height: 1.45;
-	overflow-y: scroll;
 	padding: 0;
 	margin: 0;
 	text-align: center;
+	@include bp("tiny") {
+		font-size: 120%;
+	}
+}
+
+body {
+	overflow-y: scroll;
+	perspective: 1px;
+	transform-style: preserve-3d;
 }
 
 h1, h2, h3, h4, p, time {
@@ -157,7 +170,7 @@ img {
 }
 
 a {
-
+	color: $tertiary;
 }
 
 /**
@@ -166,12 +179,47 @@ a {
 
 .page-header {
 	position: relative;
+	overflow: hidden;
 
-	background-image: url(../img/band-stand-embrace.jpg);
-	background-position-x: center !important;
-	background-position-y: top;
-	background-size: cover;
-	height: 100vh;
+	height: 100%;
+
+	transform-style: inherit;
+
+	@include bp("tiny") {
+		height: 23em;
+	}
+
+	&::before {
+		position: absolute;
+		top: 0;
+		left: 0;
+		z-index: -1;
+
+		background-color: $secondary;
+		background-image: url(../img/tiny/band-stand-embrace.jpg);
+		background-position: center top;
+		background-size: cover;
+		background-repeat: no-repeat;
+		height: 100%;
+		width: 100%;
+
+		content: "";
+		transform: translateZ(-1px) scale(2);
+
+		@include bp("tiny") {
+			background-attachment: fixed;
+			background-image: url(../img/small/band-stand-embrace.jpg);
+			transform: none;
+		}
+		@include bp("medium") {
+			background-image: url(../img/medium/band-stand-embrace.jpg);
+			background-position: center 30%;
+		}
+		@include bp("largest") {
+			background-image: url(../img/large/band-stand-embrace.jpg);
+		}
+	}
+
 	.header-content {
 		position: absolute;
 		bottom: 2em;
@@ -187,11 +235,18 @@ a {
 	}
 	.header-title {
 		margin: 0;
+		@include bp("tiny") {
+			font-size: 2.441em * 1.5;
+		}
 	}
 }
 
 .box {
 	padding: 2.5em 1.5em;
+	@include bp("small") {
+		padding: 3.5em 2.5em;
+	}
+
 	.box-title {
 		line-height: 1;
 	}
@@ -201,12 +256,32 @@ a {
 }
 
 .constrain-copy {
-
+	margin-left: auto;
+	margin-right: auto;
+	max-width: 35em;
 }
 
 .copy {
-	> * {
+	> *:last-child {
 		margin-bottom: 0;
+	}
+}
+
+.btn-cta {
+	display: inline-block;
+	border-radius: 0.25em;
+	padding: 0.75em 1em;
+
+	background-color: $tertiary;
+	color: $primary;
+
+	text-decoration: none;
+
+	transition: background-color 100ms ease;
+
+	&:hover,
+	&:focus {
+		background-color: darken($tertiary, 10%);
 	}
 }
 
@@ -215,26 +290,48 @@ a {
 	margin: 0;
 	padding: 0;
 	width: 100%;
+	@include bp("small") {
+		position: relative;
+
+		height: 15em;
+		overflow: hidden;
+	}
+
 	.figure-image {
 		display: block;
 		width: 100%;
+		@include bp("small") {
+			position: absolute;
+			left: 0;
+
+			&.image-align-top {
+				top: 0;
+			}
+			&.image-align-bottom {
+				bottom: 0;
+			}
+		}
 	}
 }
 
 .page-footer {
 	position: relative;
 
-	background-color: $misty-rose;
-	background-image: linear-gradient($misty-rose 50%, transparent 100%), url(../img/walking-away.jpg);
+	background-color: $secondary;
+	background-image: linear-gradient($secondary 0%, transparent 60%), url(../img/walking-away.jpg);
 	background-position-x: center !important;
 	background-position-y: bottom;
-	background-size: contain;
+	background-size: cover;
 	background-repeat: no-repeat;
-	padding-bottom: 10em;
+	padding-bottom: 15em;
 
 	color: $primary;
 
 	text-shadow: 1px 1px 1px $font;
+	@include bp("medium") {
+		background-image: linear-gradient($secondary 0%, transparent 60%), url(../img/walking-away-landscape.jpg);
+	}
+
 	.countdown-clock {
 
 	}
