--- a/app/templates/pages/index.hbs
+++ b/app/templates/pages/index.hbs
@@ -5,6 +5,7 @@ title: The Wedding
 <header id="home" class="page-header">
   <div class="header-content">
     <h1 class="header-title">Liam and Gemma</h1>
+    <time class="header-date datetime" datetime="2015-04-07">4<sup>th</sup> July 2015</time>
   </div>
 </header>
 
@@ -12,7 +13,6 @@ title: The Wedding
   <article id="the-story" class="box">
     <header>
       <h1 class="box-title">We're getting married</h1>
-      <time class="box-caption datetime" datetime="2015-04-07">4<sup>th</sup> July 2015</time>
     </header>
     <section class="copy constrain-copy">
       <p>
@@ -28,35 +28,37 @@ title: The Wedding
     <img class="figure-image image-align-bottom" src="img/tip-toe-kiss.jpg" alt="Tip Toe Kiss" />
   </figure>
 
-  <article id="the-ceremony" class="box box-ceremony">
-    <header>
-      <h1 class="box-title">The Ceremony</h1>
-    </header>
-    <section class="copy constrain-copy">
-      <p>
-        The wedding ceremony will take place at the Patricroft Methodist Church in Eccles.
-      </p>
-      <p>
-        Times are to be confirmed at a later date.
-      </p>
-      <a class="btn-cta" href="https://www.google.co.uk/maps/place/Patricroft+Methodist+Church/@53.478924,-2.363533,15z/data=!4m2!3m1!1s0x0:0x569599fa4b74ec34">Directions to the Church</a>
-    </section>
-  </article>
+  <div class="boxes-grid">
+    <article id="the-ceremony" class="box box-ceremony">
+      <header>
+        <h1 class="box-title">The Ceremony</h1>
+      </header>
+      <section class="copy constrain-copy">
+        <p>
+          The wedding ceremony will take place at the Patricroft Methodist Church in Eccles.
+        </p>
+        <p>
+          Times are to be confirmed at a later date.
+        </p>
+        <a class="btn-cta" href="https://www.google.co.uk/maps/place/Patricroft+Methodist+Church/@53.478924,-2.363533,15z/data=!4m2!3m1!1s0x0:0x569599fa4b74ec34">Directions to the Church</a>
+      </section>
+    </article>
 
-  <article id="reception" class="box box-reception">
-    <header>
-      <h1 class="box-title">The Reception</h1>
-    </header>
-    <section class="copy constrain-copy">
-      <p>
-        The wedding breakfast and evening party will take place in the lovely <a href="{{ links.compass-room }}">Compass Room</a> at The Lowry Theatre in Salford Quays.
-      </p>
-      <p>
-        Times are to be confirmed at a later date.
-      </p>
-      <a class="btn-cta" href="https://www.google.co.uk/maps/place/The+Lowry/@53.470835,-2.296037,15z/data=!4m2!3m1!1s0x0:0xed3c94d61ec8b13f">Directions to The Lowry</a>
-    </section>
-  </article>
+    <article id="reception" class="box box-reception">
+      <header>
+        <h1 class="box-title">The Reception</h1>
+      </header>
+      <section class="copy constrain-copy">
+        <p>
+          The wedding breakfast and evening party will take place in the lovely <a href="{{ links.compass-room }}">Compass Room</a> at The Lowry Theatre in Salford Quays.
+        </p>
+        <p>
+          Times are to be confirmed at a later date.
+        </p>
+        <a class="btn-cta" href="https://www.google.co.uk/maps/place/The+Lowry/@53.470835,-2.296037,15z/data=!4m2!3m1!1s0x0:0xed3c94d61ec8b13f">Directions to The Lowry</a>
+      </section>
+    </article>
+  </div>
 
   <article id="accomodation" class="box box-accomodation">
     <header>
@@ -70,7 +72,7 @@ title: The Wedding
   </article>
 
   <figure class="divider-figure">
-    <img class="figure-image image-align-top" src="img/media-city.jpg" alt="Media City" />
+    <img class="figure-image image-align-center" src="img/media-city.jpg" alt="Media City" />
   </figure>
 
   <article id="gifts" class="box">
